discussion/kv_engine/142736/142736_rev41_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-15 05:18:00.000000000
Message: 
Uploaded patch set 41.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 07:50:59.000000000
Message: 
Patch Set 41: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36874/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0042/0157]: file stats post warmup...WARNING: Logging before InitGoogleLogging() is written to STDERR
W0614 22:37:48.335697 77000 HazptrDomain.h:671] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object
Exceeded maximum wait time of 60000000us waiting for stat "ep_queue_size" to be 0 (last value:95) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36874/ )

Timeout of a CTest test 407/407 Test #286: ep_testsuite_xdcr.ephemeral.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31503/ : FAILURE

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16:
error: invalid application of "sizeof" to an incomplete type "ServerSocket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9881/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9881/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10533/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10533/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11452/ : FAILURE

Compile error at [2021-06-15T05:42:16.017Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_subdoc_multipath.cc:845:1:
fatal error: opening dependency file kv_engine/tests/testapp/CMakeFiles/memcached_testapp.dir/Unity/unity_4_cxx.cxx.o.d: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11605/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19467/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11879/ : FAILURE

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87c5c) in operator new(unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11879/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/391/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
